# phd_code

./: .gitignore  LICENSE  README.md  fli_calculator.ipynb  package-lock.json  pyproject.toml  requirements.txt  structure.dot
assets/: cubesat_model.mtl
data/tmp/: EOPMetadata.xml  manifest.xml
data/worldcities/: license.txt
notebooks/: camera_view.ipynb  delayed_state_scheduling.ipynb  fli_calculator.ipynb  global_cloud_distribution.ipynb  lookahead_discounting.ipynb  lookahead_discounting_analytic.ipynb  lookahead_discounting_claude_test copy.ipynb  lookahead_discounting_claude_test.ipynb  rl_lookahead.ipynb  slew_angle_vis.ipynb
notebooks/exploration/: advantage_estimator.ipynb  attention_lookahead.ipynb  ber_conv.ipynb  camera_view_test.ipynb  cartpole.ipynb  cartpole.py  cut_vertex.ipynb  fli_fov_constraints.ipynb  fli_fov_constraints_fixed.ipynb  gauss_bonnet_test.ipynb  get_env_data.ipynb  global_cloud_map.ipynb  goes_ber_analytic.ipynb  heuristic_slew_test.ipynb  ipython_cell_input.py  recurrent_ppo_setup.ipynb  request_generation.ipynb  request_generation.py  rl_lookahead_actual.ipynb  sphere_cuts_test.ipynb  tasking_environment.ipynb  tasking_environment_test.ipynb  test_dt_analytic.ipynb  test_env_camera.ipynb  test_pg.ipynb  test_pg_episode.ipynb  test_schedulers.ipynb
notebooks/plots/: 110_trajectory  390_trajectory  (+15 more)
src/: access.py  actor_critic.py  cameras.py  constants.py  extract_defs.py  imagery.py  linear_dynamics.py  orbits.py  rotations.py  schedulers.py  tasking_env.py  vector.py
test/: test_cameras.py
tests/: test_cameras.py
(+23 files in other folders)
